# bubble-cosh

./: .gitignore  README.md  justfile  pyproject.toml
community/: bubble-cosh-databooth.py  bubble-cosh-databooth_mo.py  bubble-cosh-mo-databooth.py  bubble_cosh_databooth_mo.py
tests/: test_bubble_cosh.py  test_bubble_cosh_mo.py.OFF
